# yomibiyori

./: .easignore  .editorconfig  .env.local.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.dev  GEMINI.md  MIGRATION_QUICKSTART.md  NOTIFICATION_SETUP_CHECKLIST.md  OPENAPI.yaml  RAILWAY_DEPLOYMENT_CHECKLIST.md  RANKING_VERIFICATION.md  README.md  REQUIREMENTS.md  SCHEMA.sql  SETUP_EXTERNAL_SERVICES.md  alembic.ini  codex.yaml  debug_redis.py  debug_themes.py  docker-compose.dev.yml  env.example  fix_sponsor_campaigns_rls.sql  fix_sponsor_rls.sql  fix_sponsors_rls.sql  gitignore  google-services.json  nixpacks.toml  pyproject.toml  requirements.txt  setup_railway_env.md  test_auth_live.py  test_session.json  test_theme.json  test_theme_today.json  yomibiyori_app_ui.tsx  yomibiyori_sns_share_requirements.md
.claude/: settings.local.json
alembic/: env.py
app/: main.py
docs/: CREDIT_SYSTEM_SETUP.md  MIGRATION_GUIDE.md  SPONSOR_THEME_FLOW.md  X_API_SETUP.md  actions_secrets_checklist.md  ci_cd_schedule.md  deployment_railway.md  password_reset_simple.md  push_notifications_setup.md  ranking_finalization_job.md  sample_works_generation.md  supabase_email_template_setup.md  theme_generation_job.md
migrations/: 20251124_fix_admin_announcement_policy.sql  20251124_reset_sponsor_announcements_expiry_default.sql  20251125_create_sponsor_credit_transactions.sql  20251125_create_support_messages.sql  20251125_refactor_support_chat.sql  20251126_add_stripe_customer_id_to_sponsors.sql  add_sponsor_account_notifications.sql  add_sponsor_notifications.sql
mobile/: .easignore  .env.example  .env.local.example  .gitignore  App.tsx  PUSH_NOTIFICATIONS_SETUP.md  TEST_SCENARIOS.md  app.config.ts  app.json  eas.json  package-lock.json  package.json  test_error_handling.js
scripts/: create_auth_stub.sql  create_sample_sponsor_theme.py  create_sample_works.py  create_sponsor_theme.sql  create_sponsor_theme_sync.py  create_test_sponsor_theme.py  finalize_rankings.py  generate_apple_secret.py  generate_ipad_preview.py  (+19 more)
(+257 files in other folders)
