[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yomibiyori"
version = "0.1.0"
description = "Yomibiyori poetic SNS backend"
authors = [{name = "Yomibiyori"}]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.29",
  "psycopg2-binary>=2.9.9",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "pydantic-settings>=2.4.0",
  "pyjwt[crypto]>=2.8.0",
  "python-jose[cryptography]>=3.3.0",
  "requests>=2.32.0",
  "redis>=5.0.0",
  "alembic>=1.13.1",
  "openai>=1.0.0",
  "pydantic[email]>=2.7.0",
  "pykakasi>=2.2.1",
  "anthropic>=0.40.0",
  "posthog>=3.0.0",
  "Pillow>=10.0.0",
  "requests-oauthlib>=1.3.1",
  "tweepy>=4.14.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "httpx>=0.26.0",
  "faker>=24.0.0",
  "fakeredis>=2.23.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*", "scripts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
